--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongodb": "^4.12.1"
+    "mongodb": "^4.12.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
